[gd_scene load_steps=4 format=3 uid="uid://im8sy0xrui6"]

[ext_resource type="Script" path="res://Scenes/pipe_spawner.gd" id="1_5wsqq"]
[ext_resource type="AudioStream" uid="uid://ctq7pl6rkogm6" path="res://Assets/Sounds/6.wav" id="2_8bow2"]
[ext_resource type="AudioStream" uid="uid://b4f1c48e43vu3" path="res://Assets/Sounds/Pickup_Coin.wav" id="3_wsojc"]

[node name="PipeSpawner" type="Node"]
script = ExtResource("1_5wsqq")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="CrashSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_8bow2")

[node name="PointSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_wsojc")
pitch_scale = 0.8
